# teletickers

./: .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRACION-REACT-NATIVE.md  PRODUCT_BACKLOG.md  README.md  docker-compose.yml  skills-lock.json
api-events/: .gitignore  Dockerfile  go.mod  go.sum
api-events/cmd/api/: main.go
api-events/internal/config/: config.go
api-events/internal/database/: postgres.go
api-events/internal/handlers/: evento_handler.go
api-events/internal/models/: evento.go
api-events/internal/repository/: evento_repository.go
backend/: .env.example  .gitignore  Dockerfile  README.md
backend/queries/: cancel_event.graphql  compra.graphql  create_event.graphql  event_analytics.graphql  list_all_events.graphql  me.graphql  notification.graphql  search_event.graphql  view_event.graphql
backend/src/: lib.rs  main.rs  routes.rs
backend/src/config/: database.rs  notificacion.rs
backend/src/domain/: comprobante.rs  evento.rs  mod.rs  tipo_entrada.rs
backend/src/graphql/: context.rs  schema.rs
backend/src/middleware/: auth_middleware.rs  rate_limiter.rs
backend/src/ports/: compra_port.rs  comprobante_port.rs  entrada_port.rs  notificacion_port.rs  notification_port.rs  payment_port.rs
backend/src/repositories/: compra_repo.rs  comprobante_repo.rs  mod.rs  notificacion_repo.rs
backend/src/usecases/: mod.rs
backend/src/utils/: mod.rs  pdf_generator.rs  qr_generator.rs
frontend/: .gitignore  Dockerfile  astro.config.mjs  build.zig  package-lock.json  package.json  script.bash  tailwind.config.mjs
frontend/public/: manifest.json  sw.js
frontend/public/wasm/: radix_sort.wasm
frontend/src/components/: HomePage.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: apollo-client.ts
frontend/src/pages/: ayuda.astro  buscar.astro  categorias.astro  configuracion-cuenta.astro  crear-evento.astro  favoritos.astro  index.astro  login.astro  mis-eventos.astro  mis-tickets.astro  perfil.astro  register.astro
frontend/src/styles/: global.css
frontend/src/types/: index.ts
frontend/src/utils/: radixSortWasm.ts  toast.ts
frontend/wasm/: radix_sort.zig
migrations/: init_db.sql
mobile/: app.json  package-lock.json  package.json
mobile/src/lib/: apollo-client.ts
mobile/src/screens/: CreateEventScreen.tsx  EventDetailScreen.tsx  HomeScreen.tsx  MyEventsScreen.tsx
queries/: compra.graphql  create_entrada.graphql  event_byId.graphql  login.graphql  publish_event.graphql  register.graphql  tickets purchased.graphql
src/: app_state.rs  cors.rs  lib.rs  main.rs  server.rs
src/config/: comprobante.rs  jwt.rs  mod.rs  payment.rs  storage.rs
src/domain/: compra.rs  entrada.rs  notificacion.rs  user.rs
src/domain/value_objects/: mod.rs  money.rs  qr_code.rs
src/error/: mod.rs
src/graphql/: context.rs  handlers.rs  mod.rs  schema.rs
src/graphql/mutations/: auth_mutation.rs  compra_mutation.rs  evento_mutation.rs  notificacion_mutation.rs  (+1 more)
src/middleware/: mod.rs
src/ports/: evento_port.rs  mod.rs  storage_port.rs  tipo_entrada_port.rs  user_port.rs
src/repositories/: entrada_repo.rs  evento_repo.rs  tipo_entrada_repo.rs  user_repo.rs
src/utils/: date_utils.rs  validators.rs
(+108 files in other folders)
