[package]
name = "ticky"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.8.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
] }
sea-orm-migration = "1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
] }
lettre = "0.11.19"
futures = "0.3"
regex = "1.12.2"
rand = "0.8"
argon2 = "0.5.3"

# Seguridad / Autenticación
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
qrcode = "0.14.1"
dotenvy = "0.15.7"
rust_decimal = "1.39"

# Configuración y entorno
# Manejo de errores
thiserror = "2.0.17"
anyhow = "1.0"

# Utilidades varias
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
once_cell = "1.19"
lazy_static = "1.4"
async-trait = "0.1.89"
actix-web-lab = "0.24.3"
futures-util = "0.3.31"

# Logs
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
actix-http-test = "3.2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
pretty_assertions = "1.4"

# ==========================================
# BINARIO PRINCIPAL
# ==========================================
[[bin]]
name = "sistema_backend"
path = "src/main.rs"
